--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
     <!-- Fullbay (stacked) -->
     <div class="rounded-xl border border-slate-200 bg-white p-6 md:p-7 shadow-sm hover:shadow-md transition">
       <div class="flex items-center justify-between gap-3">
-        <h3 class="font-semibold">UX Product Owner · Fullbay</h3>
+        <h3 class="font-semibold">UX Product Owner</h3>
         <div class="flex flex-wrap gap-2 text-xs">
           <span class="px-2 py-1 rounded-full bg-slate-50 text-slate-600">User Research</span>
           <span class="px-2 py-1 rounded-full bg-slate-50 text-slate-600">Backlog Managment</span>
@@ -132,7 +132,7 @@
     <!-- QA / Automation (stacked) -->
     <div class="rounded-xl border border-slate-200 bg-white p-6 md:p-7 shadow-sm hover:shadow-md transition">
       <div class="flex items-center justify-between gap-3">
-        <h3 class="font-semibold">QA Engineer · TestLauncher / In Time Tec</h3>
+        <h3 class="font-semibold">QA Engineer</h3>
         <div class="flex flex-wrap gap-2 text-xs">
           <span class="px-2 py-1 rounded-full bg-slate-50 text-slate-600">Exploratory Testing</span>
           <span class="px-2 py-1 rounded-full bg-slate-50 text-slate-600">Automation Testing</span>
