--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
         <strong>Graduate Teaching Assistant · Idaho State University</strong>
         <span class="text-sm text-slate-500">09/2025 – Present</span>
       </div>
-      <p class="mt-1 text-slate-700">Support both research and clinical operations in the Audiology program.</p>
+      <p class="mt-1 text-slate-700">Support both research and clinical operations in the Audiology program</p>
       <ul class="mt-1 list-disc pl-5">
         <li>Review spectral-temporal modulation and speech-in-noise perception articles.</li>
         <li>Assist with patient coordination and clinic logistics in the Cochlear Implant Clinic.</li>
@@ -91,7 +91,7 @@
         <strong>Product Owner (formerly QA Engineer) · Fullbay (Remote)</strong>
         <span class="text-sm text-slate-500">01/2023 – 08/2025</span>
       </div>
-      <p class="mt-1 text-slate-700">Led cross-functional product & UX initiatives for front-end modernization, onboarding, and retention.</p>
+      <p class="mt-1 text-slate-700">Led cross-functional product & UX initiatives for front-end modernization, onboarding, and retention</p>
       <ul class="mt-1 list-disc pl-5">
         <li>Standardized UX research (contextual inquiry, affinity mapping, beta/canary testing) and built a research library.</li>
         <li>Managed UI/UX refactor from PHP to React; implemented a scalable design system.</li>
@@ -107,7 +107,7 @@
         <strong>QA Engineer · Contractor at TestLauncher & In Time Tec (Remote)</strong>
         <span class="text-sm text-slate-500">07/2021 – 12/2022</span>
       </div>
-      <p class="mt-1 text-slate-700">Clients included Invoice Simple, Thentia, and Fullbay.</p>
+      <p class="mt-1 text-slate-700">Clients included Invoice Simple, Thentia, and Fullbay</p>
       <ul class="mt-1 list-disc pl-5">
         <li>Conducted end-to-end, regression, and accessibility testing across web & mobile.</li>
         <li>Built automated UI/API tests (Selenium, Playwright, TestComplete, Postman, RapidAPI); validated payment integrations.</li>
@@ -218,14 +218,14 @@
         <div><strong>Run Into the Fire Award</strong> · Fullbay</div>
         <span class="text-sm text-slate-500 whitespace-nowrap">Feb 2024 & Oct 2024</span>
       </div>
-      <p class="mt-1 text-slate-700">Recognized for leadership and operational excellence in developing the first load testing plan and leading the product team’s inaugural customer visits</p>
+      <p class="mt-1 text-slate-700">Recognized for leadership and operational excellence in developing the first load testing plan and leading the product team’s inaugural customer visits.</p>
     </div>
     <div>
       <div class="flex items-start justify-between gap-4">
         <div><strong>Be High Performing Aware</strong> · Fullbay</div>
         <span class="text-sm text-slate-500 whitespace-nowrap">Mar 2023 & Dec 2024</span>
       </div>
-      <p class="mt-1 text-slate-700">Recognized for simplifying profitability calculations, improving customer training resources, and demonstrating leadership</p>
+      <p class="mt-1 text-slate-700">Recognized for simplifying profitability calculations, improving customer training resources, and demonstrating leadership.</p>
     </div>
     <div>
       <div class="flex items-start justify-between gap-4">
