--- a/resume.html
+++ b/resume.html
@@ -53,6 +53,7 @@
   <nav class="mt-4 text-sm flex flex-wrap gap-3 text-slate-600">
     <a href="#experience" class="px-2 py-1 rounded-md hover:bg-slate-100">Experience</a>
     <a href="#volunteer" class="px-2 py-1 rounded-md hover:bg-slate-100">Volunteer</a>
+    <a href="#certs" class="px-2 py-1 rounded-md hover:bg-slate-100">Certifications</a>
     <a href="#skills" class="px-2 py-1 rounded-md hover:bg-slate-100">Technical Proficiencies & Tools</a>
   </nav>
 
@@ -79,10 +80,10 @@
         <strong>Graduate Teaching Assistant · Idaho State University</strong>
         <span class="text-sm text-slate-500">09/2025 – Present</span>
       </div>
-      <p class="mt-1 text-slate-700">Support both research and clinical operations in the Audiology program</p>
+      <p class="mt-1 text-slate-700">Support both research and clinical operations in the Audiology program.</p>
       <ul class="mt-1 list-disc pl-5">
         <li>Review spectral-temporal modulation and speech-in-noise perception articles.</li>
-        <li>Assist with patient coordination and clinic logistics in the Cochlear Implant Clinic.</li>
+        <li>Assist with patient coordination and clinic logistics in the Cochlear Implant clinic.</li>
       </ul>
     </div>
 
@@ -91,7 +92,7 @@
         <strong>Product Owner (formerly QA Engineer) · Fullbay (Remote)</strong>
         <span class="text-sm text-slate-500">01/2023 – 08/2025</span>
       </div>
-      <p class="mt-1 text-slate-700">Led cross-functional product & UX initiatives for front-end modernization, onboarding, and retention</p>
+      <p class="mt-1 text-slate-700">Led cross-functional product & UX initiatives for front-end modernization, onboarding, and retention.</p>
       <ul class="mt-1 list-disc pl-5">
         <li>Standardized UX research (contextual inquiry, affinity mapping, beta/canary testing) and built a research library.</li>
         <li>Managed UI/UX refactor from PHP to React; implemented a scalable design system.</li>
@@ -107,7 +108,7 @@
         <strong>QA Engineer · Contractor at TestLauncher & In Time Tec (Remote)</strong>
         <span class="text-sm text-slate-500">07/2021 – 12/2022</span>
       </div>
-      <p class="mt-1 text-slate-700">Clients included Invoice Simple, Thentia, and Fullbay</p>
+      <p class="mt-1 text-slate-700">Clients included Invoice Simple, Thentia, and Fullbay.</p>
       <ul class="mt-1 list-disc pl-5">
         <li>Conducted end-to-end, regression, and accessibility testing across web & mobile.</li>
         <li>Built automated UI/API tests (Selenium, Playwright, TestComplete, Postman, RapidAPI); validated payment integrations.</li>
@@ -208,6 +209,31 @@
   </div>
 </section>
 
+<section id="certs" class="mt-10 rounded-2xl border border-slate-200 bg-white p-6 md:p-8">
+  <h2 class="text-xl md:text-2xl font-semibold">Certifications</h2>
+
+  <ul class="mt-3 list-disc pl-5 leading-relaxed">
+    <li><strong>CPR (BLS)</strong> — American Heart Association. <span class="text-slate-500">Expires: <!-- REPLACE -->08/2027</span></li>
+    <li><strong>CITI Program – Human Subjects Research</strong> (Biomedical/Basic). <span class="text-slate-500">Expires: <!-- REPLACE -->N/A</span></li>
+    <li><strong>CITI Program – Responsible Conduct of Research (RCR)</strong>. <span class="text-slate-500">Expires: <!-- REPLACE -->07/2027</span></li>
+  </ul>
+
+  <!-- Optional: thumbnail gallery (click to open full image) -->
+  <div class="mt-4 grid sm:grid-cols-2 md:grid-cols-3 gap-4">
+    <a href="assets/certs/cpr.jpg" target="_blank" class="block rounded-xl border border-slate-200 overflow-hidden">
+      <img src="assets/certs/cpr.jpg" alt="CPR certificate (replace)" class="w-full h-40 object-cover bg-slate-100">
+    </a>
+    <a href="assets/certs/citi-hsr.jpg" target="_blank" class="block rounded-xl border border-slate-200 overflow-hidden">
+      <img src="assets/certs/citi-hsr.jpg" alt="CITI HSR certificate (replace)" class="w-full h-40 object-cover bg-slate-100">
+    </a>
+    <a href="assets/certs/citi-rcr.jpg" target="_blank" class="block rounded-xl border border-slate-200 overflow-hidden">
+      <img src="assets/certs/citi-rcr.jpg" alt="CITI RCR certificate (replace)" class="w-full h-40 object-cover bg-slate-100">
+    </a>
+  </div>
+
+</section>
+
+
 <!-- Recognition(own section) -->
 <section id="Recognition" class="mt-10 rounded-2xl border border-slate-200 bg-white p-6 md:p-8">
   <h2 class="text-xl md:text-2xl font-semibold">Company Recognition</h2>
@@ -218,14 +244,14 @@
         <div><strong>Run Into the Fire Award</strong> · Fullbay</div>
         <span class="text-sm text-slate-500 whitespace-nowrap">Feb 2024 & Oct 2024</span>
       </div>
-      <p class="mt-1 text-slate-700">Recognized for leadership and operational excellence in developing the first load testing plan and leading the product team’s inaugural customer visits.</p>
+      <p class="mt-1 text-slate-700">Recognized for leadership and operational excellence in developing the first load testing plan and leading the product team’s inaugural customer visits</p>
     </div>
     <div>
       <div class="flex items-start justify-between gap-4">
         <div><strong>Be High Performing Aware</strong> · Fullbay</div>
         <span class="text-sm text-slate-500 whitespace-nowrap">Mar 2023 & Dec 2024</span>
       </div>
-      <p class="mt-1 text-slate-700">Recognized for simplifying profitability calculations, improving customer training resources, and demonstrating leadership.</p>
+      <p class="mt-1 text-slate-700">Recognized for simplifying profitability calculations, improving customer training resources, and demonstrating leadership</p>
     </div>
     <div>
       <div class="flex items-start justify-between gap-4">
