--- a/resume.html
+++ b/resume.html
@@ -248,7 +248,7 @@
     </div>
     <div>
       <div class="flex items-start justify-between gap-4">
-        <div><strong>Be High Performing Aware</strong> · Fullbay</div>
+        <div><strong>Be High Performing Award</strong> · Fullbay</div>
         <span class="text-sm text-slate-500 whitespace-nowrap">Mar 2023 & Dec 2024</span>
       </div>
       <p class="mt-1 text-slate-700">Recognized for simplifying profitability calculations, improving customer training resources, and demonstrating leadership</p>
