--- a/resume.html
+++ b/resume.html
@@ -244,14 +244,14 @@
         <div><strong>Run Into the Fire Award</strong> · Fullbay</div>
         <span class="text-sm text-slate-500 whitespace-nowrap">Feb 2024 & Oct 2024</span>
       </div>
-      <p class="mt-1 text-slate-700">Recognized for leadership and operational excellence in developing the first load testing plan and leading the product team’s inaugural customer visits</p>
+      <p class="mt-1 text-slate-700">Recognized for leadership and operational excellence in developing the first load testing plan and leading the product team’s inaugural contextual inquiry customer visits.</p>
     </div>
     <div>
       <div class="flex items-start justify-between gap-4">
         <div><strong>Be High Performing Award</strong> · Fullbay</div>
         <span class="text-sm text-slate-500 whitespace-nowrap">Mar 2023 & Dec 2024</span>
       </div>
-      <p class="mt-1 text-slate-700">Recognized for simplifying profitability calculations, improving customer training resources, and demonstrating leadership</p>
+      <p class="mt-1 text-slate-700">Recognized for simplifying profitability calculations, improving customer training resources, and demonstrating leadership.</p>
     </div>
     <div>
       <div class="flex items-start justify-between gap-4">
