--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
         <h3 class="font-semibold">Quick Facts</h3>
         <ul class="mt-2 space-y-1 text-slate-700">
           <li><span class="font-medium">Program:</span> Idaho State University (2029)</li>
-          <li><span class="font-medium">Interests:</span> Accessible healthcare; Open across adult & pediatric diagnostics</li>
+          <li><span class="font-medium">Interests:</span> Accessible healthcare; hearing technology; Open across adult & pediatric diagnostics</li>
           <li><span class="font-medium">Location:</span> Pocatello, ID</li>
         </ul>
 
@@ -121,9 +121,9 @@
         </div>
         <div class="md:pl-6"><h5 class="text-sm font-semibold text-slate-600">How I’ll use this in clinic</h5>
           <ul class="mt-2 list-disc pl-4 space-y-2">
-            <li><strong>Case histories & counseling:</strong> open‑ended interviewing to build trust and robust understanding</li>
-            <li><strong>Inclusive materials & workflows:</strong> patient education that reduces cognitive load</li>
-            <li><strong>Plain‑language translation:</strong> turn results & device options into shared goals/next steps</li>
+            <li><strong>Case histories & counseling:</strong> open‑ended interviewing to build trust and robust understanding patient needs</li>
+            <li><strong>Inclusive materials & workflows:</strong> patient education and counseling that reduces cognitive load</li>
+            <li><strong>Plain‑language translation:</strong> turn test results & device options into shared goals/next steps</li>
           </ul>
         </div>
       </div>
