--- a/about.html
+++ b/about.html
@@ -114,16 +114,16 @@
         <div>
           <h5 class="text-sm font-semibold text-slate-600">What I did</h5>
           <ul class="mt-2 list-disc pl-4 space-y-2">
-            <li><strong>User interviews & discovery:</strong> led UX discovery; planned and ran user interview sessions; surfaced stated & unstated needs</li>
-            <li><strong>Accessibility advocacy:</strong> built consensus to prioritize inclusive patterns in the design system</li>
-            <li><strong>Cross‑functional leadership:</strong> translated complex workflows & data into clear guidance and goals</li>
+            <li><strong>User interviews & discovery:</strong> to lead UX discovery; planned and ran user interview sessions; surfaced stated & unstated needs</li>
+            <li><strong>Accessibility advocacy</strong> to build consensus to prioritize inclusive patterns in the design system</li>
+            <li><strong>Cross‑functional leadership</strong> to translate complex workflows & data into clear guidance and goals</li>
           </ul>
         </div>
         <div class="md:pl-6"><h5 class="text-sm font-semibold text-slate-600">How I’ll use this in clinic</h5>
           <ul class="mt-2 list-disc pl-4 space-y-2">
-            <li><strong>Case histories & counseling:</strong> open‑ended interviewing to build trust and robust understanding patient needs</li>
-            <li><strong>Inclusive materials & workflows:</strong> patient education and counseling that reduces cognitive load</li>
-            <li><strong>Plain‑language translation:</strong> turn test results & device options into shared goals/next steps</li>
+            <li><strong>Case histories & counseling</strong> with open‑ended interviewing to build trust and robust understanding patient needs</li>
+            <li><strong>Inclusive materials & workflows</strong> for patient education and counseling that reduces cognitive load</li>
+            <li><strong>Plain‑language translation</strong> to turn test results & device options into shared goals/next steps</li>
           </ul>
         </div>
       </div>
@@ -145,16 +145,16 @@
         <div>
           <h5 class="text-sm font-semibold text-slate-600">What I did</h5>
           <ul class="mt-2 list-disc pl-4 space-y-2">
-            <li><strong>Repeatable test suites:</strong> built checks & automation for reliability</li>
-            <li><strong>Root‑cause analysis:</strong> pattern‑spotting beyond surface symptoms</li>
-            <li><strong>Documentation & handoffs:</strong> clear records and cross‑team communication</li>
+            <li><strong>Repeatable test suites</strong> to build checks & automation for reliability</li>
+            <li><strong>Root‑cause analysis</strong> for pattern‑spotting beyond surface symptoms</li>
+            <li><strong>Documentation & handoffs</strong> to ensure clear records and cross‑team communication</li>
           </ul>
         </div>
         <div class="md:pl-6"><h5 class="text-sm font-semibold text-slate-600">How I’ll use this in clinic</h5>
           <ul class="mt-2 list-disc pl-4 space-y-2">
-            <li><strong>Verification & calibration:</strong> checklist discipline for accuracy & safety</li>
-            <li><strong>Case analysis mindset:</strong> look for patterns across tests & patient reports</li>
-            <li><strong>Accurate records & follow‑up:</strong> precise documentation for coordinated care</li>
+            <li><strong>Verification & calibration</strong> with checklist discipline for accuracy & safety</li>
+            <li><strong>Case analysis mindset</strong> to look for patterns across tests & patient reports</li>
+            <li><strong>Accurate records & follow‑up</strong> for precise documentation for coordinated care</li>
           </ul>
         </div>
       </div>
