--- a/about.html
+++ b/about.html
@@ -114,16 +114,16 @@
         <div>
           <h5 class="text-sm font-semibold text-slate-600">What I did</h5>
           <ul class="mt-2 list-disc pl-4 space-y-2">
-            <li><strong>User interviews & discovery:</strong> to lead UX discovery; planned and ran user interview sessions; surfaced stated & unstated needs</li>
-            <li><strong>Accessibility advocacy</strong> to build consensus to prioritize inclusive patterns in the design system</li>
-            <li><strong>Cross‑functional leadership</strong> to translate complex workflows & data into clear guidance and goals</li>
+            <li><strong>User interviews</strong> to lead UX discovery; planned and ran user interview sessions; surfaced stated & unstated needs</li>
+            <li><strong>Accessibility advocacy</strong> to build consensus to prioritize inclusive patterns in our new design system</li>
+            <li><strong>Cross‑functional leadership</strong> to translate complex workflows & data into clear guidance, goals, and timelines for my development team and stakeholders</li>
           </ul>
         </div>
         <div class="md:pl-6"><h5 class="text-sm font-semibold text-slate-600">How I’ll use this in clinic</h5>
           <ul class="mt-2 list-disc pl-4 space-y-2">
             <li><strong>Case histories & counseling</strong> with open‑ended interviewing to build trust and robust understanding patient needs</li>
             <li><strong>Inclusive materials & workflows</strong> for patient education and counseling that reduces cognitive load</li>
-            <li><strong>Plain‑language translation</strong> to turn test results & device options into shared goals/next steps</li>
+            <li><strong>Plain‑language translation</strong> to turn test results & device options into shared goals/next steps with patients</li>
           </ul>
         </div>
       </div>
