--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,8 @@
       </div>
       <p class="mt-1 text-slate-700">Led cross-functional product & UX initiatives for front-end modernization, onboarding, and retention.</p>
       <ul class="mt-1 list-disc pl-5">
-        <li>Standardized UX research (contextual inquiry, affinity mapping, beta/canary testing) for the product team. And initialized the product team's first contextual inquiry visits across the country.</li>
+        <li>Standardized UX research (contextual inquiry, affinity mapping, beta/canary testing) for the product team.</li>
+        <li>Initialized the product team's first contextual inquiry visits across the country.</li>
         <li>Built a research library to leverage user insights and track user input historically.</li>
         <li>Managed UI/UX refactor from PHP to React; implemented a scalable design system.</li>
         <li>Delivered subscription redesign, Quick Charge billing, and a profit-forecasting dashboard.</li>
