--- a/resume.html
+++ b/resume.html
@@ -129,7 +129,7 @@
   <div class="mt-6 grid md:grid-cols-3 gap-6">
     <!-- Keep assessments as text (or turn into chips if you prefer) -->
     <div class="md:col-span-3">
-      <h4 class="text-sm font-semibold">Audiology Completed Assessments</h4>
+      <h4 class="text-sm font-semibold">Audiology Completed Skills Assessments</h4>
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Clinic Prep</span>
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Case History</span>
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Otoscopy</span>
