--- a/resume.html
+++ b/resume.html
@@ -82,8 +82,8 @@
       </div>
       <p class="mt-1 text-slate-700">Support both research and clinical operations in the Audiology program.</p>
       <ul class="mt-1 list-disc pl-5">
-        <li>Review spectral-temporal modulation and speech-in-noise perception articles.</li>
-        <li>Assist with patient coordination and clinic logistics in the Cochlear Implant clinic.</li>
+        <li>Currently reviewing spectral-temporal modulation tests with Dr. Billings for potential implementation in research and clinical use within our cochlear implant program.</li>
+        <li>Provide administrative assistance in our cochlear implant clinic with patient follow-up and manufacturer replacements.</li>
       </ul>
     </div>
 
