--- a/resume.html
+++ b/resume.html
@@ -21,10 +21,10 @@
       </a>
       <button id="menuBtn" class="md:hidden rounded-lg border border-slate-300 px-3 py-1">Menu</button>
       <nav id="menu" class="hidden md:flex items-center gap-1">
-        <a data-nav href="about.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">About</a>
-        <a data-nav href="resume.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">Resume</a>
-        <a data-nav href="clinic.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">Clinic Hours</a>
-        <a data-nav href="ux.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">UX Case Study</a>
+    <!--     <a data-nav href="about.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">About</a>    -->
+    <!--     <a data-nav href="resume.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">Resume</a>    -->
+   <!--      <a data-nav href="clinic.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">Clinic Hours</a>    -->
+   <!--      <a data-nav href="ux.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">UX Case Study</a>    -->
         <!-- Remove if you’ve deleted the page
         <a data-nav href="contact.html" class="px-3 py-2 rounded-lg hover:bg-slate-100">Contact</a>
         -->
