--- a/resume.html
+++ b/resume.html
@@ -134,6 +134,8 @@
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Case History</span>
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Otoscopy</span>
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Tympanometry</span>
+      <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">OAEs</span>
+      <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">CPA</span>
     </div>
 
     <div>
