--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
           <circle cx="26" cy="26" r="24" class="stroke-slate-400/60" />
           <path d="M19 21c0-4 3-7 7-7s7 3 7 7c0 2-1 4-3 5-1 1-2 3-2 5 0 3-2 5-5 5" class="stroke-current" stroke-width="2" stroke-linecap="round"/>
         </svg>
-        <span>Esie Vaughn</span>
+     <!--   <span>Esie Vaughn</span> -->
       </a>
       <button id="menuBtn" class="md:hidden rounded-lg border border-slate-300 px-3 py-1">Menu</button>
       <nav id="menu" class="hidden md:flex items-center gap-1">
