--- a/resume.html
+++ b/resume.html
@@ -136,6 +136,10 @@
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Tympanometry</span>
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">OAEs</span>
       <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">CPA</span>
+      <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">VRA</span>
+      <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Speech Audiometry</span>
+      <span class="px-2.5 py-1 rounded-full bg-slate-100 text-slate-700 text-sm print:bg-transparent print:border print:border-slate-300">Acoustic Reflexes</span>
+
     </div>
 
     <div>
@@ -257,13 +261,13 @@
       </div>
       <p class="mt-1 text-slate-700">Recognized for simplifying profitability calculations, improving customer training resources, and demonstrating leadership.</p>
     </div>
-    <div>
+<!--     <div>
       <div class="flex items-start justify-between gap-4">
         <div><strong>Equity Grant</strong> · Fullbay</div>
         <span class="text-sm text-slate-500 whitespace-nowrap">2024</span>
       </div>
       <p class="mt-1 text-slate-700">Awarded for long-term contributions to product strategy, performance, and organizational growth.</p>
-    </div>
+    </div> -->
   </div>
 </section>
   </main>
